[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pqdict"
description = "A Pythonic indexed priority queue."
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  {name = "Nezar Abdennur", email = "nabdennur@gmail.com"},
]
keywords = [
    "dict", 
    "priority queue", 
    "heap", 
    "scheduler", 
    "data structures",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

readme = "README.rst"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
test = [
    "isort",
    "mypy",
    "pytest",
    "pyupgrade",
    "ruff",
]
docs = [
    "numpydoc",
    "Sphinx<9.0.0",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
]

[project.urls]
homepage = "https://github.com/nvictus/pqdict"
documentation = "https://pqdict.readthedocs.io"
repository = "https://github.com/nvictus/pqdict"
changelog = "https://github.com/nvictus/pqdict/blob/master/CHANGES"

[tool.hatch.version]
path = "pqdict/__init__.py"

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
fix = "ruff check --fix ."
test = "pytest"
docs = "sphinx-autobuild docs docs/_build/html"

[tool.hatch.envs.test]
template = "default"
skip-install = false
features = ["test"]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.ruff.lint]
extend-select = [
    "E",  # style errors
    "D",  # pydocstyle
    "F",  # pyflakes
    "I",  # isort
    "RUF", # ruff-specific rules
    "UP", # pyupgrade
    "W",  # style  warnings
]
ignore = [
    "D100",
    "D103",
    "D203",
    "D213",
]