[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqdict"
description = "A Pythonic indexed priority queue."
readme = "README.rst"
version = "1.4.1"
license = {text = "MIT"}
authors = [
  {name = "Nezar Abdennur", email = "nabdennur@gmail.com"},
]
keywords = [
    "dict", 
    "priority queue", 
    "heap", 
    "scheduler", 
    "data structures",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.7"
dependencies = [
    "importlib-metadata; python_version<'3.8'"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
]
docs = [
    "Sphinx",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
]

[project.urls]
homepage = "https://github.com/nvictus/pqdict"
documentation = "https://pqdict.readthedocs.io"
repository = "https://github.com/nvictus/pqdict"
changelog = "https://github.com/nvictus/pqdict/blob/master/CHANGES"

[tool.ruff]
target-version = "py37"
exclude = [
    ".venv",
]

[tool.ruff.lint]
extend-select = [
    "E",  # style errors
    "D",  # pydocstyle
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # ruff-specific rules
    "UP",  # pyupgrade
    "W",  # style  warnings
]
ignore = [
    "D100",
    "D103",
    "D203",
    "D213",
]

[tool.ruff.lint.isort]
known-first-party = ["pqdict"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"